<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.GetStartedActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/titleTextView"
                style="@style/darkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_52sdp"
                android:text="@string/getStartText"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/subtitleTextView"
                style="@style/lightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/getStartSubtitle"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/titleTextView"
                app:layout_constraintStart_toStartOf="@id/titleTextView"
                app:layout_constraintTop_toBottomOf="@id/titleTextView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_170sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:src="@drawable/starting_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitleTextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                style="@style/buttonWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/button"
                android:padding="@dimen/_10sdp"
                android:text="@string/continueEmail"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/imageView"
                app:layout_constraintStart_toStartOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_flat_color_icons_google"
                android:text="@string/btnGoogle"
                style="@style/socialButton"
                app:layout_constraintEnd_toEndOf="@id/btnSignIn"
                app:layout_constraintStart_toStartOf="@id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnApple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_ant_design_apple_filled"
                android:text="@string/btnApple"
                style="@style/socialButton"
                app:layout_constraintEnd_toEndOf="@id/btnGoogle"
                app:layout_constraintStart_toStartOf="@id/btnGoogle"
                app:layout_constraintTop_toBottomOf="@id/btnGoogle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textGotoSignUp"
                style="@style/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center_horizontal"
                android:text="@string/goSignUpText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btnApple"
                app:layout_constraintStart_toStartOf="@id/btnApple"
                app:layout_constraintTop_toBottomOf="@id/btnApple" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>